subiendo a heroku nulluser

--- a/public/index.html
+++ b/public/index.html
@@ -26,12 +26,18 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    <link rel="stylesheet" href="../src/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/html" href="../src/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
-<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
     <!-- <link href="https://bootswatch.com/4/flatly/bootstrap.min.css" rel="stylesheet"> -->
   </head>
   <body>
+      
+      <script>
+       (false) ?  document.documentElement.requestFullscreen() :""
+      </script>
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
